# adaptive-surface-reconstruction

./: .boilerplate_cpp  .boilerplate_py  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_with_docker.sh  docker_entrypoint.sh  entrypoint.sh
.github/actions/docker-action/: action.yml
.github/workflows/: Dockerfile  entrypoint.sh  main.yml  scorecard.yml  upload_artifact_test.yml
appimage/: CMakeLists.txt
cmake/: external_deps.cmake
cpp/lib/: CMakeLists.txt  asr.cpp  asr.hpp  asr_config.h  asr_config_generated.h.in  asr_types.h  contouring.cpp  contouring.h  eigen.h  grid.cpp  grid.h  nested_vector.h  nsearch.cpp  nsearch.h  octree.cpp  octree.h  octreebase.h  postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h  smallset.h  third_party_notices.inl.in  utils.cpp  utils.h  zindex.h
cpp/pybind/: CMakeLists.txt  module.cpp
datasets/: README.md  create_t10k_msgpacks.py  thingi10k_info.msgpack.zst
models/: common.py  common_tf.py  common_torch.py
models/v0/: convert_tf2torchscript.py  datareader.py  default.yaml  net_definitions_tf.py  net_definitions_torch.py  train.py
python/: CMakeLists.txt  MANIFEST.in  setup.py
python/adaptivesurfacereconstruction/: __init__.py
utils/: check_cpp_style.cmake  update_boilerplate.cmake
utils/deeplearningutilities/tf/: evolution_trainer.py  my_checkpoint_management.py
utils/deeplearningutilities/torch/: evolution_trainer.py  my_checkpoint_management.py
